feat: enhance typography, colors, icons, and components
Added new font with additional weights, introduced a custom color and new SVG icons. Updated package dependencies, refined global styles, and adjusted layout. Added a new type to types.ts and created ClientLastName component for GetAccess. Improved CTAButton and GetAccess components and performed minor refactoring across UI.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,11 +9,14 @@
   --color-gold-custom-start: #FDE87C;
   --color-gold-custom-end: #F6C136;
   --color-yellow-custom: #FEC201;
+  --color-yellow-dark-custom: #E7AB00;
   --font-inter: var(--font-inter), ui-sans-serif, system-ui, sans-serif;
   /* Rebond replaced by Cabin */
   --font-rebond: var(--font-cabin), ui-sans-serif, system-ui, sans-serif;
   /* At Chrome TRIAL replaced by Montserrat */
   --font-at-chrome: var(--font-montserrat), ui-sans-serif, system-ui, sans-serif;
+  /* PF Marlet Display replaced by Playfair_Display */
+  --font-pf-marlet: var(--font-playfair), ui-sans-serif, system-ui, sans-serif;
 }
 
 :root {
@@ -38,5 +41,9 @@
   h1,
   h2 {
     @apply text-[44px];
+  }
+
+  .shadow-gold {
+    box-shadow: 0 4px 24px rgba(254, 194, 1, 0.56);
   }
 }
